<resources>
    <string name="app_name">Notifikacije Mašinac</string>
    <string name="action_settings">Podešavanja</string>
    <string name="openDrawer">Open Drawer </string>
    <string name="closeDrawer">Close Drawer </string>

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="empty_istorija">Nemate novih vesti.</string>
    <string name="empty_vesti">Nemate nepročitanih vesti.</string>
    <string name="title_activity_settings">Podešavanja</string>

    <string name="title_activity_feedback">Feedback</string>

    <string-array name="categories_array">
        <item>Interfejs</item>
        <item>Funkcionalnost</item>
        <item>Performanse</item>
        <item>Drugo</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Opšte</string>

    <!--<string name="pref_title_display_name">Display name</string>-->
    <!--<string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifikacije</string>

    <string name="pref_title_new_message_notifications">Nove notifikacije o vestima</string>

    <string name="pref_title_ringtone">Zvuk poruke</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibracija</string>
    <string name="title_activity_about">O aplikaciji</string>

    <string name="about_naslov">Notifikacije vesti Mašinskog fakulteta</string>
    <string name="about_tekst1">Cilj aplikacije je olakšavanje praćenja novih vesti vezanih za predmete na Mašinskom fakultetu.</string>
    <string name="about_tekst2">Kako se koristi?</string>

    <string name="about_tekst3">Obeležite predmete za koje želite da primate notifikacije i dodirnite dugme <b>&quot;Sačuvaj&quot;</b>.
        Kada se objavi nova vest, stići će vam notifikacija. Ukoliko je ne otvorite, već želite da pogledate kasnije, vest će biti zapisana na tabu <b>&quot;Vesti&quot;</b>.
        \n\nTab &quot;<b>Istorija</b>&quot; sadrži poslednjih 30 vesti, Bez obzira na to da li ste ih pročitali ili ne.</string>

    <string name="about_tekst4"><b>Autori aplikacije:\n\nVies Studios\n\nKontakt: viesstudios@gmail.com</b></string>

    <string name="drawer_header_1">Notifikacije Mašinski fakultet</string>
    <string name="drawer_header_2">Notifikacije o novim vestima</string>
    <string name="save">Sačuvaj</string>

</resources>
