<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vies.notifikacijevesti.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/aboutNaslov"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_naslov"/>
    <TextView
        android:id="@+id/aboutTekst1"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutNaslov"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity=""
        android:text="@string/about_tekst1" />
    <TextView
        android:id="@+id/aboutTekst2"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTekst1"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:text="@string/about_tekst2"/>

    <TextView
        android:id="@+id/aboutTekst3"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTekst2"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/about_tekst3"/>

    <TextView
        android:id="@+id/aboutTekst4"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTekst3"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/about_tekst4"/>
</RelativeLayout>
